// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Empty list 1`] = `
<section
  aria-roledescription="friend-list"
  class="s-2FHiERVIQQ6s"
>
  <h3
    class="s-2FHiERVIQQ6s"
  >
    Vos ami·e·s
  </h3>
   
  <span
    class="s-PYEUE3EzsI5c"
  >
    <input
      class="s-PYEUE3EzsI5c"
      id="toggle-searchability"
      type="checkbox"
    />
     
    <label
      class="s-PYEUE3EzsI5c"
      for="toggle-searchability"
    >
      Les autres joueurs peuvent vous demander en ami·e.
    </label>
  </span>
  <!--&lt;UsernameSearchability&gt;-->
   
  <ol
    class="s-PJ48chyAailx"
    role="listbox"
  />
   
  
  <!--&lt;FriendList&gt;-->
   
  <div
    class="s-2FHiERVIQQ6s"
  >
    <span
      aria-expanded="true"
      aria-haspopup="menu"
      class="wrapper s-JM3fRWrV7jJU"
    >
      <fieldset
        class="s-Fe6WNbR-55zp"
      >
        <legend
          class="s-Fe6WNbR-55zp"
        >
          Pseudo à inviter
        </legend>
         
        <input
          class="s-Fe6WNbR-55zp"
          type="text"
        />
      </fieldset>
      <!--&lt;Input&gt;-->
       
      
      <!--&lt;Menu&gt;-->
    </span>
    <!--&lt;Typeahead&gt;-->
     
    <button
      class="s-NMyTiX1zi6rz"
      disabled=""
    >
      <div
        class="s-NMyTiX1zi6rz"
      >
        <span
          class="material-icons s-NMyTiX1zi6rz"
        >
          person_add_alt_1
        </span>
        
        
      </div>
       
    </button>
    <!--&lt;Button&gt;-->
  </div>
   
  <span
    class="s-2FHiERVIQQ6s empty"
  >
    Entrez le pseudo de vos amis et invitez les pour pouvoir jouer avec eux.
  </span>
</section>
`;

exports[`With friends 1`] = `
<section
  aria-roledescription="friend-list"
  class="s-2FHiERVIQQ6s"
>
  <h3
    class="s-2FHiERVIQQ6s"
  >
    Vos ami·e·s
  </h3>
   
  <span
    class="s-PYEUE3EzsI5c"
  >
    <input
      class="s-PYEUE3EzsI5c"
      id="toggle-searchability"
      type="checkbox"
    />
     
    <label
      class="s-PYEUE3EzsI5c"
      for="toggle-searchability"
    >
      Les autres joueurs peuvent vous demander en ami·e.
    </label>
  </span>
  <!--&lt;UsernameSearchability&gt;-->
   
  <ol
    class="s-PJ48chyAailx"
    role="listbox"
  >
    <li
      class="s-PJ48chyAailx"
    >
      <figure
        class="s-engCJu8q-fNe"
        style="--dimension: 40px; --color: undefined; --top: undefinedpx; --left: undefinedpx; --border-width: 3px"
      >
        <img
          alt="avatar for Fernand Naudin"
          class="s-engCJu8q-fNe"
          height="40"
          referrerpolicy="no-referrer"
          width="40"
        />
         
        <figcaption
          class="s-engCJu8q-fNe abbreviated"
        >
          FN
        </figcaption>
      </figure>
      <!--&lt;PlayerThumbnail&gt;-->
       
      <span
        class="s-PJ48chyAailx"
        role="term"
      >
        Fernand Naudin
      </span>
       
      <span
        class="buttons s-PJ48chyAailx"
      >
        <button
          class="s-NMyTiX1zi6rz"
        >
          <div
            class="s-NMyTiX1zi6rz"
          >
            <span
              class="material-icons s-NMyTiX1zi6rz"
            >
              delete
            </span>
            
            
          </div>
           
        </button>
        <!--&lt;Button&gt;-->
      </span>
       
    </li>
    <li
      class="s-PJ48chyAailx"
    >
      <figure
        class="s-engCJu8q-fNe"
        style="--dimension: 40px; --color: undefined; --top: undefinedpx; --left: undefinedpx; --border-width: 3px"
      >
        <img
          alt="avatar for Maître Follas"
          class="s-engCJu8q-fNe"
          height="40"
          referrerpolicy="no-referrer"
          width="40"
        />
         
        <figcaption
          class="s-engCJu8q-fNe abbreviated"
        >
          MF
        </figcaption>
      </figure>
      <!--&lt;PlayerThumbnail&gt;-->
       
      <span
        class="s-PJ48chyAailx"
        role="term"
      >
        Maître Follas
      </span>
       
      <span
        class="buttons s-PJ48chyAailx"
      >
        <button
          class="s-NMyTiX1zi6rz"
        >
          <div
            class="s-NMyTiX1zi6rz"
          >
            <span
              class="material-icons s-NMyTiX1zi6rz"
            >
              delete
            </span>
            
            
          </div>
           
        </button>
        <!--&lt;Button&gt;-->
      </span>
       
    </li>
    <li
      class="s-PJ48chyAailx"
    >
      <figure
        class="s-engCJu8q-fNe"
        style="--dimension: 40px; --color: undefined; --top: undefinedpx; --left: undefinedpx; --border-width: 3px"
      >
        <img
          alt="avatar for Pascal"
          class="s-engCJu8q-fNe"
          height="40"
          referrerpolicy="no-referrer"
          width="40"
        />
         
        <figcaption
          class="s-engCJu8q-fNe abbreviated"
        >
          P
        </figcaption>
      </figure>
      <!--&lt;PlayerThumbnail&gt;-->
       
      <span
        class="s-PJ48chyAailx"
        role="term"
      >
        Pascal
      </span>
       
      <span
        class="buttons s-PJ48chyAailx"
      >
        <button
          class="s-NMyTiX1zi6rz"
        >
          <div
            class="s-NMyTiX1zi6rz"
          >
            <span
              class="material-icons s-NMyTiX1zi6rz"
            >
              delete
            </span>
            
            
          </div>
           
        </button>
        <!--&lt;Button&gt;-->
      </span>
       
    </li>
    <li
      class="s-PJ48chyAailx"
    >
      <figure
        class="s-engCJu8q-fNe"
        style="--dimension: 40px; --color: undefined; --top: undefinedpx; --left: undefinedpx; --border-width: 3px"
      >
        <img
          alt="avatar for Bastien"
          class="s-engCJu8q-fNe"
          height="40"
          referrerpolicy="no-referrer"
          width="40"
        />
         
        <figcaption
          class="s-engCJu8q-fNe abbreviated"
        >
          B
        </figcaption>
      </figure>
      <!--&lt;PlayerThumbnail&gt;-->
       
      <span
        class="s-PJ48chyAailx"
        role="term"
      >
        Bastien
      </span>
       
      <span
        class="buttons s-PJ48chyAailx"
      >
        <button
          class="s-NMyTiX1zi6rz"
        >
          <div
            class="s-NMyTiX1zi6rz"
          >
            <span
              class="material-icons s-NMyTiX1zi6rz"
            >
              delete
            </span>
            
            
          </div>
           
        </button>
        <!--&lt;Button&gt;-->
      </span>
       
    </li>
  </ol>
   
  
  <!--&lt;FriendList&gt;-->
   
  <div
    class="s-2FHiERVIQQ6s"
  >
    <span
      aria-expanded="true"
      aria-haspopup="menu"
      class="wrapper s-JM3fRWrV7jJU"
    >
      <fieldset
        class="s-Fe6WNbR-55zp"
      >
        <legend
          class="s-Fe6WNbR-55zp"
        >
          Pseudo à inviter
        </legend>
         
        <input
          class="s-Fe6WNbR-55zp"
          type="text"
        />
      </fieldset>
      <!--&lt;Input&gt;-->
       
      
      <!--&lt;Menu&gt;-->
    </span>
    <!--&lt;Typeahead&gt;-->
     
    <button
      class="s-NMyTiX1zi6rz"
      disabled=""
    >
      <div
        class="s-NMyTiX1zi6rz"
      >
        <span
          class="material-icons s-NMyTiX1zi6rz"
        >
          person_add_alt_1
        </span>
        
        
      </div>
       
    </button>
    <!--&lt;Button&gt;-->
  </div>
   
</section>
`;

exports[`With game 1`] = `
HTMLCollection [
  <section
    aria-roledescription="player-list"
    class="s-2FHiERVIQQ6s"
  >
    <h3
      class="s-2FHiERVIQQ6s"
    >
      Joueur·euse·s
    </h3>
     
    <ol
      class="s-i-J0I6k9Mfa4"
    >
      <li
        class="s-i-J0I6k9Mfa4"
      >
        <figure
          class="s-engCJu8q-fNe colored"
          style="--dimension: 40px; --color: #9c3096; --top: undefinedpx; --left: undefinedpx; --border-width: 3px"
        >
          <img
            alt="avatar for Fernand Naudin"
            class="s-engCJu8q-fNe"
            height="40"
            referrerpolicy="no-referrer"
            width="40"
          />
           
          <figcaption
            class="s-engCJu8q-fNe abbreviated"
          >
            FN
          </figcaption>
        </figure>
        <!--&lt;PlayerThumbnail&gt;-->
         
        <span
          class="s-i-J0I6k9Mfa4"
          role="term"
        >
          Fernand Naudin
        </span>
         
        <span
          class="buttons s-i-J0I6k9Mfa4"
        >
           
        </span>
         
      </li>
      <li
        class="s-i-J0I6k9Mfa4"
      >
        <figure
          class="s-engCJu8q-fNe colored"
          style="--dimension: 40px; --color: #ff4500; --top: undefinedpx; --left: undefinedpx; --border-width: 3px"
        >
          <img
            alt="avatar for Maître Follas"
            class="s-engCJu8q-fNe"
            height="40"
            referrerpolicy="no-referrer"
            width="40"
          />
           
          <figcaption
            class="s-engCJu8q-fNe abbreviated"
          >
            MF
          </figcaption>
        </figure>
        <!--&lt;PlayerThumbnail&gt;-->
         
        <span
          class="s-i-J0I6k9Mfa4"
          role="term"
        >
          Maître Follas
          <span
            class="guest s-i-J0I6k9Mfa4"
          >
            invité·e
          </span>
        </span>
         
        <span
          class="buttons s-i-J0I6k9Mfa4"
        >
          <button
            class="s-NMyTiX1zi6rz"
          >
            <div
              class="s-NMyTiX1zi6rz"
            >
              <span
                class="material-icons s-NMyTiX1zi6rz"
              >
                highlight_remove
              </span>
              
              
            </div>
             
          </button>
          <!--&lt;Button&gt;-->
           
        </span>
         
      </li>
      <li
        class="s-i-J0I6k9Mfa4"
      >
        <figure
          class="s-engCJu8q-fNe colored"
          style="--dimension: 40px; --color: #239646; --top: undefinedpx; --left: undefinedpx; --border-width: 3px"
        >
          <img
            alt="avatar for Pascal"
            class="s-engCJu8q-fNe"
            height="40"
            referrerpolicy="no-referrer"
            width="40"
          />
           
          <figcaption
            class="s-engCJu8q-fNe abbreviated"
          >
            P
          </figcaption>
        </figure>
        <!--&lt;PlayerThumbnail&gt;-->
         
        <span
          class="s-i-J0I6k9Mfa4"
          role="term"
        >
          Pascal
        </span>
         
        <span
          class="buttons s-i-J0I6k9Mfa4"
        >
           
        </span>
         
      </li>
    </ol>
    <!--&lt;PlayerList&gt;-->
     
    <div
      class="s-2FHiERVIQQ6s"
    >
      <button
        class="has-text s-NMyTiX1zi6rz"
      >
        <div
          class="s-NMyTiX1zi6rz"
        >
          <span
            class="material-icons s-NMyTiX1zi6rz"
          >
            gamepad
          </span>
          
          <span
            class="text s-NMyTiX1zi6rz"
          >
            Ajouter des joueur·e·s
          </span>
          
        </div>
         
      </button>
      <!--&lt;Button&gt;-->
    </div>
     
     
    <!--&lt;Portal&gt;-->
    <!--&lt;Dialogue&gt;-->
    <!--&lt;InviteDialogue&gt;-->
  </section>,
  <div
    class="discussion s-0ASxPKiLViNe"
  >
    <h3
      class="s-0ASxPKiLViNe"
    >
      Discussion
    </h3>
     
    <div
      class="messages s-0ASxPKiLViNe"
    />
     
    <form
      class="s-0ASxPKiLViNe"
    >
      <fieldset
        class="s-Fe6WNbR-55zp"
      >
         
        <input
          class="s-Fe6WNbR-55zp"
        />
      </fieldset>
      <!--&lt;Input&gt;-->
       
      <button
        class="s-NMyTiX1zi6rz"
        disabled=""
        title="Envoyer à tous"
        type="submit"
      >
        <div
          class="s-NMyTiX1zi6rz"
        >
          <span
            class="material-icons s-NMyTiX1zi6rz"
          >
            send
          </span>
          
          
        </div>
         
      </button>
      <!--&lt;Button&gt;-->
    </form>
  </div>,
]
`;

exports[`With game with no seats 1`] = `
HTMLCollection [
  <section
    aria-roledescription="player-list"
    class="s-2FHiERVIQQ6s"
  >
    <h3
      class="s-2FHiERVIQQ6s"
    >
      Joueur·euse·s
    </h3>
     
    <ol
      class="s-i-J0I6k9Mfa4"
    >
      <li
        class="s-i-J0I6k9Mfa4"
      >
        <figure
          class="s-engCJu8q-fNe colored"
          style="--dimension: 40px; --color: #9c3096; --top: undefinedpx; --left: undefinedpx; --border-width: 3px"
        >
          <img
            alt="avatar for Fernand Naudin"
            class="s-engCJu8q-fNe"
            height="40"
            referrerpolicy="no-referrer"
            width="40"
          />
           
          <figcaption
            class="s-engCJu8q-fNe abbreviated"
          >
            FN
          </figcaption>
        </figure>
        <!--&lt;PlayerThumbnail&gt;-->
         
        <span
          class="s-i-J0I6k9Mfa4"
          role="term"
        >
          Fernand Naudin
        </span>
         
        <span
          class="buttons s-i-J0I6k9Mfa4"
        >
           
        </span>
         
      </li>
      <li
        class="s-i-J0I6k9Mfa4"
      >
        <figure
          class="s-engCJu8q-fNe colored"
          style="--dimension: 40px; --color: #ff4500; --top: undefinedpx; --left: undefinedpx; --border-width: 3px"
        >
          <img
            alt="avatar for Maître Follas"
            class="s-engCJu8q-fNe"
            height="40"
            referrerpolicy="no-referrer"
            width="40"
          />
           
          <figcaption
            class="s-engCJu8q-fNe abbreviated"
          >
            MF
          </figcaption>
        </figure>
        <!--&lt;PlayerThumbnail&gt;-->
         
        <span
          class="s-i-J0I6k9Mfa4"
          role="term"
        >
          Maître Follas
          <span
            class="guest s-i-J0I6k9Mfa4"
          >
            invité·e
          </span>
        </span>
         
        <span
          class="buttons s-i-J0I6k9Mfa4"
        >
          <button
            class="s-NMyTiX1zi6rz"
          >
            <div
              class="s-NMyTiX1zi6rz"
            >
              <span
                class="material-icons s-NMyTiX1zi6rz"
              >
                highlight_remove
              </span>
              
              
            </div>
             
          </button>
          <!--&lt;Button&gt;-->
           
        </span>
         
      </li>
      <li
        class="s-i-J0I6k9Mfa4"
      >
        <figure
          class="s-engCJu8q-fNe colored"
          style="--dimension: 40px; --color: #239646; --top: undefinedpx; --left: undefinedpx; --border-width: 3px"
        >
          <img
            alt="avatar for Pascal"
            class="s-engCJu8q-fNe"
            height="40"
            referrerpolicy="no-referrer"
            width="40"
          />
           
          <figcaption
            class="s-engCJu8q-fNe abbreviated"
          >
            P
          </figcaption>
        </figure>
        <!--&lt;PlayerThumbnail&gt;-->
         
        <span
          class="s-i-J0I6k9Mfa4"
          role="term"
        >
          Pascal
        </span>
         
        <span
          class="buttons s-i-J0I6k9Mfa4"
        >
           
        </span>
         
      </li>
    </ol>
    <!--&lt;PlayerList&gt;-->
     
  </section>,
  <div
    class="discussion s-0ASxPKiLViNe"
  >
    <h3
      class="s-0ASxPKiLViNe"
    >
      Discussion
    </h3>
     
    <div
      class="messages s-0ASxPKiLViNe"
    />
     
    <form
      class="s-0ASxPKiLViNe"
    >
      <fieldset
        class="s-Fe6WNbR-55zp"
      >
         
        <input
          class="s-Fe6WNbR-55zp"
        />
      </fieldset>
      <!--&lt;Input&gt;-->
       
      <button
        class="s-NMyTiX1zi6rz"
        disabled=""
        title="Envoyer à tous"
        type="submit"
      >
        <div
          class="s-NMyTiX1zi6rz"
        >
          <span
            class="material-icons s-NMyTiX1zi6rz"
          >
            send
          </span>
          
          
        </div>
         
      </button>
      <!--&lt;Button&gt;-->
    </form>
  </div>,
]
`;

exports[`With lobby 1`] = `
HTMLCollection [
  <section
    aria-roledescription="player-list"
    class="s-2FHiERVIQQ6s"
  >
    <h3
      class="s-2FHiERVIQQ6s"
    >
      Participant·e·s
    </h3>
     
    <ol
      class="s-i-J0I6k9Mfa4"
    >
      <li
        class="s-i-J0I6k9Mfa4"
      >
        <figure
          class="s-engCJu8q-fNe colored"
          style="--dimension: 40px; --color: #9c3096; --top: undefinedpx; --left: undefinedpx; --border-width: 3px"
        >
          <img
            alt="avatar for Fernand Naudin"
            class="s-engCJu8q-fNe"
            height="40"
            referrerpolicy="no-referrer"
            width="40"
          />
           
          <figcaption
            class="s-engCJu8q-fNe abbreviated"
          >
            FN
          </figcaption>
        </figure>
        <!--&lt;PlayerThumbnail&gt;-->
         
        <span
          class="s-i-J0I6k9Mfa4"
          role="term"
        >
          Fernand Naudin
        </span>
         
        <span
          class="buttons s-i-J0I6k9Mfa4"
        >
           
        </span>
         
      </li>
      <li
        class="s-i-J0I6k9Mfa4"
      >
        <figure
          class="s-engCJu8q-fNe colored"
          style="--dimension: 40px; --color: #ff4500; --top: undefinedpx; --left: undefinedpx; --border-width: 3px"
        >
          <img
            alt="avatar for Maître Follas"
            class="s-engCJu8q-fNe"
            height="40"
            referrerpolicy="no-referrer"
            width="40"
          />
           
          <figcaption
            class="s-engCJu8q-fNe abbreviated"
          >
            MF
          </figcaption>
        </figure>
        <!--&lt;PlayerThumbnail&gt;-->
         
        <span
          class="s-i-J0I6k9Mfa4"
          role="term"
        >
          Maître Follas
          <span
            class="guest s-i-J0I6k9Mfa4"
          >
            invité·e
          </span>
        </span>
         
        <span
          class="buttons s-i-J0I6k9Mfa4"
        >
          <button
            class="s-NMyTiX1zi6rz"
          >
            <div
              class="s-NMyTiX1zi6rz"
            >
              <span
                class="material-icons s-NMyTiX1zi6rz"
              >
                highlight_remove
              </span>
              
              
            </div>
             
          </button>
          <!--&lt;Button&gt;-->
           
        </span>
         
      </li>
      <li
        class="s-i-J0I6k9Mfa4"
      >
        <figure
          class="s-engCJu8q-fNe colored"
          style="--dimension: 40px; --color: #239646; --top: undefinedpx; --left: undefinedpx; --border-width: 3px"
        >
          <img
            alt="avatar for Pascal"
            class="s-engCJu8q-fNe"
            height="40"
            referrerpolicy="no-referrer"
            width="40"
          />
           
          <figcaption
            class="s-engCJu8q-fNe abbreviated"
          >
            P
          </figcaption>
        </figure>
        <!--&lt;PlayerThumbnail&gt;-->
         
        <span
          class="s-i-J0I6k9Mfa4"
          role="term"
        >
          Pascal
        </span>
         
        <span
          class="buttons s-i-J0I6k9Mfa4"
        >
          <button
            class="s-NMyTiX1zi6rz"
          >
            <div
              class="s-NMyTiX1zi6rz"
            >
              <span
                class="material-icons s-NMyTiX1zi6rz"
              >
                highlight_remove
              </span>
              
              
            </div>
             
          </button>
          <!--&lt;Button&gt;-->
           
        </span>
         
      </li>
    </ol>
    <!--&lt;PlayerList&gt;-->
     
    <div
      class="s-2FHiERVIQQ6s"
    >
      <button
        class="has-text s-NMyTiX1zi6rz"
      >
        <div
          class="s-NMyTiX1zi6rz"
        >
          <span
            class="material-icons s-NMyTiX1zi6rz"
          >
            gamepad
          </span>
          
          <span
            class="text s-NMyTiX1zi6rz"
          >
            Ajouter des particiant·e·s
          </span>
          
        </div>
         
      </button>
      <!--&lt;Button&gt;-->
    </div>
     
     
    <!--&lt;Portal&gt;-->
    <!--&lt;Dialogue&gt;-->
    <!--&lt;InviteDialogue&gt;-->
  </section>,
  <div
    class="discussion s-0ASxPKiLViNe"
  >
    <h3
      class="s-0ASxPKiLViNe"
    >
      Discussion
    </h3>
     
    <div
      class="messages s-0ASxPKiLViNe"
    />
     
    <form
      class="s-0ASxPKiLViNe"
    >
      <fieldset
        class="s-Fe6WNbR-55zp"
      >
         
        <input
          class="s-Fe6WNbR-55zp"
        />
      </fieldset>
      <!--&lt;Input&gt;-->
       
      <button
        class="s-NMyTiX1zi6rz"
        disabled=""
        title="Envoyer à tous"
        type="submit"
      >
        <div
          class="s-NMyTiX1zi6rz"
        >
          <span
            class="material-icons s-NMyTiX1zi6rz"
          >
            send
          </span>
          
          
        </div>
         
      </button>
      <!--&lt;Button&gt;-->
    </form>
  </div>,
]
`;

exports[`With requests and proposals 1`] = `
<section
  aria-roledescription="friend-list"
  class="s-2FHiERVIQQ6s"
>
  <h3
    class="s-2FHiERVIQQ6s"
  >
    Vos ami·e·s
  </h3>
   
  <span
    class="s-PYEUE3EzsI5c"
  >
    <input
      class="s-PYEUE3EzsI5c"
      id="toggle-searchability"
      type="checkbox"
    />
     
    <label
      class="s-PYEUE3EzsI5c"
      for="toggle-searchability"
    >
      Les autres joueurs peuvent vous demander en ami·e.
    </label>
  </span>
  <!--&lt;UsernameSearchability&gt;-->
   
  <ol
    class="s-PJ48chyAailx"
    role="listbox"
  >
    <li
      class="s-PJ48chyAailx"
    >
      <figure
        class="s-engCJu8q-fNe"
        style="--dimension: 40px; --color: undefined; --top: undefinedpx; --left: undefinedpx; --border-width: 3px"
      >
        <img
          alt="avatar for Fernand Naudin"
          class="s-engCJu8q-fNe"
          height="40"
          referrerpolicy="no-referrer"
          width="40"
        />
         
        <figcaption
          class="s-engCJu8q-fNe abbreviated"
        >
          FN
        </figcaption>
      </figure>
      <!--&lt;PlayerThumbnail&gt;-->
       
      <span
        class="s-PJ48chyAailx"
        role="term"
      >
        Fernand Naudin
      </span>
       
      <span
        class="buttons s-PJ48chyAailx"
      >
        <button
          class="s-NMyTiX1zi6rz"
        >
          <div
            class="s-NMyTiX1zi6rz"
          >
            <span
              class="material-icons s-NMyTiX1zi6rz"
            >
              delete
            </span>
            
            
          </div>
           
        </button>
        <!--&lt;Button&gt;-->
      </span>
       
    </li>
    <li
      class="s-PJ48chyAailx isRequest"
    >
      <figure
        class="s-engCJu8q-fNe"
        style="--dimension: 40px; --color: undefined; --top: undefinedpx; --left: undefinedpx; --border-width: 3px"
      >
        <img
          alt="avatar for Paul Wolfoni"
          class="s-engCJu8q-fNe hasImage"
          height="40"
          referrerpolicy="no-referrer"
          src="/tests/fixtures/avatar.png"
          width="40"
        />
         
      </figure>
      <!--&lt;PlayerThumbnail&gt;-->
       
      <span
        class="s-PJ48chyAailx"
        role="term"
      >
        Paul Wolfoni souhaite rejoindre vos ami·e·s
      </span>
       
      <span
        class="buttons s-PJ48chyAailx"
      >
        <button
          class="primary s-NMyTiX1zi6rz"
        >
          <div
            class="s-NMyTiX1zi6rz"
          >
            <span
              class="material-icons s-NMyTiX1zi6rz"
            >
              check
            </span>
            
            
          </div>
           
        </button>
        <!--&lt;Button&gt;-->
         
        <button
          class="s-NMyTiX1zi6rz"
        >
          <div
            class="s-NMyTiX1zi6rz"
          >
            <span
              class="material-icons s-NMyTiX1zi6rz"
            >
              clear
            </span>
            
            
          </div>
           
        </button>
        <!--&lt;Button&gt;-->
      </span>
       
    </li>
    <li
      class="s-PJ48chyAailx isProposal"
    >
      <figure
        class="s-engCJu8q-fNe colored"
        style="--dimension: 40px; --color: #040404; --top: undefinedpx; --left: undefinedpx; --border-width: 3px"
      >
        <img
          alt="avatar for Raoul Wolfoni"
          class="s-engCJu8q-fNe"
          height="40"
          referrerpolicy="no-referrer"
          width="40"
        />
         
        <figcaption
          class="s-engCJu8q-fNe abbreviated"
        >
          RW
        </figcaption>
      </figure>
      <!--&lt;PlayerThumbnail&gt;-->
       
      <span
        class="s-PJ48chyAailx"
        role="term"
      >
        Demande envoyée à Raoul Wolfoni
      </span>
       
      <span
        class="buttons s-PJ48chyAailx"
      >
        <button
          class="s-NMyTiX1zi6rz"
        >
          <div
            class="s-NMyTiX1zi6rz"
          >
            <span
              class="material-icons s-NMyTiX1zi6rz"
            >
              delete
            </span>
            
            
          </div>
           
        </button>
        <!--&lt;Button&gt;-->
      </span>
       
    </li>
    <li
      class="s-PJ48chyAailx"
    >
      <figure
        class="s-engCJu8q-fNe"
        style="--dimension: 40px; --color: undefined; --top: undefinedpx; --left: undefinedpx; --border-width: 3px"
      >
        <img
          alt="avatar for Maître Follas"
          class="s-engCJu8q-fNe"
          height="40"
          referrerpolicy="no-referrer"
          width="40"
        />
         
        <figcaption
          class="s-engCJu8q-fNe abbreviated"
        >
          MF
        </figcaption>
      </figure>
      <!--&lt;PlayerThumbnail&gt;-->
       
      <span
        class="s-PJ48chyAailx"
        role="term"
      >
        Maître Follas
      </span>
       
      <span
        class="buttons s-PJ48chyAailx"
      >
        <button
          class="s-NMyTiX1zi6rz"
        >
          <div
            class="s-NMyTiX1zi6rz"
          >
            <span
              class="material-icons s-NMyTiX1zi6rz"
            >
              delete
            </span>
            
            
          </div>
           
        </button>
        <!--&lt;Button&gt;-->
      </span>
       
    </li>
    <li
      class="s-PJ48chyAailx"
    >
      <figure
        class="s-engCJu8q-fNe"
        style="--dimension: 40px; --color: undefined; --top: undefinedpx; --left: undefinedpx; --border-width: 3px"
      >
        <img
          alt="avatar for Pascal"
          class="s-engCJu8q-fNe"
          height="40"
          referrerpolicy="no-referrer"
          width="40"
        />
         
        <figcaption
          class="s-engCJu8q-fNe abbreviated"
        >
          P
        </figcaption>
      </figure>
      <!--&lt;PlayerThumbnail&gt;-->
       
      <span
        class="s-PJ48chyAailx"
        role="term"
      >
        Pascal
      </span>
       
      <span
        class="buttons s-PJ48chyAailx"
      >
        <button
          class="s-NMyTiX1zi6rz"
        >
          <div
            class="s-NMyTiX1zi6rz"
          >
            <span
              class="material-icons s-NMyTiX1zi6rz"
            >
              delete
            </span>
            
            
          </div>
           
        </button>
        <!--&lt;Button&gt;-->
      </span>
       
    </li>
    <li
      class="s-PJ48chyAailx"
    >
      <figure
        class="s-engCJu8q-fNe"
        style="--dimension: 40px; --color: undefined; --top: undefinedpx; --left: undefinedpx; --border-width: 3px"
      >
        <img
          alt="avatar for Bastien"
          class="s-engCJu8q-fNe"
          height="40"
          referrerpolicy="no-referrer"
          width="40"
        />
         
        <figcaption
          class="s-engCJu8q-fNe abbreviated"
        >
          B
        </figcaption>
      </figure>
      <!--&lt;PlayerThumbnail&gt;-->
       
      <span
        class="s-PJ48chyAailx"
        role="term"
      >
        Bastien
      </span>
       
      <span
        class="buttons s-PJ48chyAailx"
      >
        <button
          class="s-NMyTiX1zi6rz"
        >
          <div
            class="s-NMyTiX1zi6rz"
          >
            <span
              class="material-icons s-NMyTiX1zi6rz"
            >
              delete
            </span>
            
            
          </div>
           
        </button>
        <!--&lt;Button&gt;-->
      </span>
       
    </li>
  </ol>
   
  
  <!--&lt;FriendList&gt;-->
   
  <div
    class="s-2FHiERVIQQ6s"
  >
    <span
      aria-expanded="true"
      aria-haspopup="menu"
      class="wrapper s-JM3fRWrV7jJU"
    >
      <fieldset
        class="s-Fe6WNbR-55zp"
      >
        <legend
          class="s-Fe6WNbR-55zp"
        >
          Pseudo à inviter
        </legend>
         
        <input
          class="s-Fe6WNbR-55zp"
          type="text"
        />
      </fieldset>
      <!--&lt;Input&gt;-->
       
      
      <!--&lt;Menu&gt;-->
    </span>
    <!--&lt;Typeahead&gt;-->
     
    <button
      class="s-NMyTiX1zi6rz"
      disabled=""
    >
      <div
        class="s-NMyTiX1zi6rz"
      >
        <span
          class="material-icons s-NMyTiX1zi6rz"
        >
          person_add_alt_1
        </span>
        
        
      </div>
       
    </button>
    <!--&lt;Button&gt;-->
  </div>
   
</section>
`;
